# PDS4

./: .gitignore  CMakeLists.txt  Makefile  README.md
project/: .gitignore  CMakeLists.txt  Makefile
project/src/: quick_select.c  quick_select.h
project/src/Data/: main.c
project/src/cilk/: cilk_vptree.c  cilk_vptree.h
project/src/knn/: KNNSearch.c
project/src/mpi/: mpi_exchanges.c  mpi_exchanges.h  mpi_knn.c  mpi_quick_select.c  mpi_tree.c
project/src/sequential/: sequential_vptree.c
report/: report_9707.tex
src/: KNNSearch.c  cilk_vptree.c  cilk_vptree.h  data  main.c  main.out  mpi_knn.c  mpi_knn.h  mpi_quick_select.c  mpi_vptree.c  mpi_vptree.h  quick_select.c  sequential_vptree.c  sequential_vptree.h  timer.c  timer.h  vptree.c  vptree.h
src/Data/: main.c
src/cilk/: cilk_vptree.c
src/knn/: KNNSearch.c
src/mpi/: distribute_by_median.c  distribute_by_median.h  mpi_exchanges.c  mpi_knn.c  mpi_master.c  mpi_master.h  mpi_quick_select.c  mpi_quick_select.h  mpi_slave.c  mpi_slave.h  mpi_tree.c  mpi_tree.h
src/sequential/: sequential_vptree.c  sequential_vptree.h
